--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "electron-rebuild": "^1.8.4"
   },
   "dependencies": {
-    "jquery": "^3.4.0"
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.15.0"
   }
 }
