--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gitlab": "^4.5.1",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0"
   }
