ignore electron-packager output

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules
-/net-tools-linux-arm64
-/net-tools-linux-armv7l
-/net-tools-linux-x64
-/net-tools-win32-ia32
-/net-tools-win32-x64
+*-linux-arm64
+*-linux-armv7l
+*-linux-x64
+*-win32-ia32
+*-win32-x64
+*-darwin-x64
+*-mas-x64
