--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "name": "net-tools",
   "version": "1.0.0",
   "description": "Networking Tools",
-  "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "build": "tsc && cpx \"src/**/*.{html,png,jpg}\" dist",
+    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "start": "npm run build && electron ./dist/main.js"
   },
   "repository": "https://github.com/tewarid/net-tools-electron",
-  "keywords": [],
+  "keywords": [
+    "Electron",
+    "net-tools"
+  ],
   "author": "Devendra Tewari",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@types/jquery": "^3.3.29",
+    "cpx": "^1.5.0",
     "electron": "^4.1.4",
-    "electron-rebuild": "^1.8.4"
+    "electron-rebuild": "^1.8.4",
+    "tslint": "^5.10.0",
+    "typescript": "^3.4"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gitlab": "^4.5.1",
+    "gitlab": "5.0.0-rc.13",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0"
   }
