--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "net-tools"
   ],
   "author": "Devendra Tewari",
-  "license": "CC0-1.0",
+  "license": "MIT",
   "devDependencies": {
     "@types/jquery": "^3.3.29",
     "cpx": "^1.5.0",
