--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "net-tools",
   "version": "1.0.0",
   "description": "Networking Tools",
+  "main": "./dist/main.js",
   "scripts": {
-    "build": "tsc && cpx \"src/**/*.{html,png,jpg}\" dist",
+    "build": "tsc && cpx \"src/**/*.{html,png,jpg,ico,icns}\" dist",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "package": "npm run build && electron-packager . --all --overwrite --icon ./dist/app.icns --ignore=src --ignore=.*js.map --ignore=.vscode --ignore=tsconfig.json --ignore=tslint.json"
   },
   "repository": "https://github.com/tewarid/net-tools-electron",
   "keywords": [
@@ -19,6 +21,7 @@
     "cpx": "^1.5.0",
     "electron": "^4.1.4",
     "electron-rebuild": "^1.8.4",
+    "electron-packager": "^13.1.1",
     "tslint": "^5.10.0",
     "typescript": "^3.4"
   },
