--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && cpx \"src/**/*.{html,png,jpg,ico,icns}\" dist",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "start": "npm run build && electron ./dist/main.js",
-    "package": "npm run build && electron-packager . \"Networking Tools\" --all --overwrite --icon ./dist/app.icns"
+    "package": "npm run build && electron-packager . \"Networking Tools\" --all --overwrite --icon ./dist/app.icns",
+    "dev": "concurrently --kill-others \"npm run start\" \"tsc -w\" \"cpx \\\"src/**/*.{html,png,jpg,ico,icns}\\\" dist --watch\""
   },
   "repository": "https://github.com/tewarid/net-tools-electron",
   "keywords": [
@@ -21,10 +22,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jquery": "^3.3.29",
+    "concurrently": "^4.1.0",
     "cpx": "^1.5.0",
     "electron": "^4.1.4",
-    "electron-rebuild": "^1.8.4",
     "electron-packager": "^13.1.1",
+    "electron-rebuild": "^1.8.4",
     "tslint": "^5.10.0",
     "typescript": "^3.4"
   },
