--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^4.3.1",
     "gitlab": "5.0.0-rc.13",
     "jquery": "^3.4.0",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "xterm": "^3.12.2"
   }
 }
