--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Devendra Tewari",
   "license": "MIT",
   "devDependencies": {
+    "@types/codemirror": "0.0.74",
     "@types/jquery": "^3.3.29",
     "concurrently": "^4.1.0",
     "cpx": "^1.5.0",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "codemirror": "^5.46.0",
     "gitlab": "5.0.0-rc.13",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
