--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/codemirror": "0.0.74",
     "@types/jquery": "^3.3.29",
+    "@types/knockout": "^3.4.65",
     "concurrently": "^4.1.0",
     "cpx": "^1.5.0",
     "electron": "^4.1.4",
@@ -36,6 +37,7 @@
     "codemirror": "^5.46.0",
     "gitlab": "5.0.0-rc.13",
     "jquery": "^3.4.0",
+    "knockout": "^3.5.0",
     "popper.js": "^1.15.0",
     "xterm": "^3.12.2"
   }
