--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "gitlab-tool",
+            "name": "Attach to Electron",
             "type": "chrome",
             "request": "attach",
             "port": 9222,
-            "url": "file://${workspaceFolder}/dist/gitlab-tool/gitlab-tool.html",
             "webRoot": "${workspaceFolder}/dist"
         }
     ]
