--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,15 @@
 {
     "cSpell.ignoreWords": [
+        "borderless",
         "codemirror",
+        "devendra",
+        "flaticon",
+        "freepik",
         "gitlab",
-        "submodule"
+        "icns",
+        "repo",
+        "submodule",
+        "tewari"
     ],
     "cSpell.words": []
 }
