--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jquery": "^3.4.1",
     "knockout": "^3.5.0",
     "popper.js": "^1.15.0",
-    "xterm": "^3.14.2"
+    "xterm": "^4.3.0",
+    "xterm-addon-fit": "^0.3.0"
   }
 }
