--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/codemirror": "0.0.74",
-    "@types/jquery": "^3.3.29",
+    "@types/jquery": "^3.5.1",
     "concurrently": "^4.1.0",
     "cpx": "^1.5.0",
     "electron": "^4.2.4",
@@ -33,8 +33,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "codemirror": "^5.47.0",
-    "gitlab": "5.0.0-rc.15",
-    "jquery": "^3.4.1",
+    "@gitbeaker/node": "28.0.2",
+    "jquery": "^3.5.1",
     "knockout": "^3.5.0",
     "popper.js": "^1.15.0",
     "xterm": "^4.3.0",
